# AstroLinux

./: .gitignore  AstroLinux.kdev4  CMakeLists.txt  README.md  main.cpp  resources.qrc
.kdev4/: AstroLinux.kdev4
.qt/: AstroLinux_qml.cmake  AstroLinux_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/deploy_qml_imports/: AstroLinux.cmake
.qt/qml_imports/: AstroLinux_build.rsp  AstroLinux_conf.cmake  AstroLinux_conf.rsp
.qt/rcc/: AstroLinux_raw_qml_0.qrc  AstroLinux_raw_res_0.qrc  qmake_com_astroLinux.qrc
.rcc/qmlcache/: AstroLinux_qml_loader_file_list.rsp  all_aotstats.aotstatslist  module_AstroLinux.aotstatslist
.rcc/qmllint/: AstroLinux.rsp  AstroLinux_json.rsp  AstroLinux_module.rsp
com/astroLinux/: AstroLinux_qml_module_dir_map.qrc  qmldir  resources.qrc
com/astroLinux/qml/: LocationManager.qml  MoonPhase.qml  WeatherCard.qml  main.qml
qml/: LocationManager.qml  MoonPhase.qml  ObjectsList.qml  WeatherCard.qml  main.qml
qmltypes/: AstroLinux_foreign_types.txt
testing/: moon_phases.py
